codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_bad_result.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ 详 细 补 充 （ 结 果 不 佳 ）
▌
▌ （ 可 选 ） 写 一 段 简 短 描 述 ， 帮 助 我 们 进 一 步 定 位 问 题

按  enter 确 认 ， 按  esc 返 回
